--- a/style.css
+++ b/style.css
@@ -87,64 +87,92 @@ padding: 3rem 9%;
   display: none;
 }
 #menu-btn{
-  font-size: 2.5;
+  font-size: 2.5rem;
   color: var(--light-color);
   cursor: pointer;
   display: none;
 }
+
+body{
+  height: 300rem;
+}
+.header.active{
+  box-shadow: var(--box-shadow);
+  padding: 2rem 9%;
+}
+
+
+
+
+
+
+
+
 
 
 
 
 
 /*  media queries  */
+
 @media(max-width:991px){
+
   html{
-    font-size: 55%
-  }
-}
-.header{
-  padding: 2rem;
-}
+    font-size: 55%;
+   }
 
-@media(max-width:768px){
+   .header{
+    padding:2rem ;
+   }
 
-  #menu-btn{
-     
-    display: block;
+   .header.active{
+     padding: 2rem ;
   }
-}
-  .header #login-btn i{
-    display:  block;
   }
 
-  .header #login-btn .btn{
-    display:  none;
+  
+  @media(max-width:768px){
+
+    #menu-btn{
+       
+      display: block;
+    }
+    #menu-btn.fa-times{
+      transform: rotate(180deg);
+    }
+    .header #login-btn i{
+      display: block;
+    }
+    
+    
+    .header #login-btn .btn{
+      display: none;
+    }
+.header .navbar{
+      position: absolute;
+      top: 99%;
+      left: 0;
+      right: 0;
+      background: #fff;
+      border-top: var(--border);
+      clip-path: polygon(0 0,100% 0, 100% 0, 0 0);
+    }
+
+
+    .header .navbar.active{
+      clip-path: polygon(0 0,100% 0, 100% 100%, 0% 100%);
+    }
+
+    .header .navbar a{
+      display: block;
+      margin: 2rem;
+      font-size: 2rem;
+    }
   }
-  .header .navbar{
-    position: absolute;
-    top: 99%;
-    left: 0;
-    right: 0;
-    background: #fff;
-    border-top:var(--border) ;
-    clip-path: polygon(0 0, 100% 0, 0 0);
-  }
-  .header .navbar a{
-    display: block;
-    margin: 2rem;
-    font-size: 2rem;
 
+  @media(max-width:450px){
 
-
-  }
-
-
-@media(max-width:450px){
-  html{
-    font-size: 50%
-  }
-}
-
-
-
+    html{
+      font-size: 50%;
+     }
+    }
