--- a/style.css
+++ b/style.css
@@ -93,13 +93,82 @@ padding: 3rem 9%;
   display: none;
 }
 
-body{
-  height: 300rem;
-}
 .header.active{
   box-shadow: var(--box-shadow);
   padding: 2rem 9%;
 }
+.login-form-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  height: 100%;
+  width: 100%;
+  background: rgba(255, 255, 255, .9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-form-container form{
+  padding: 2rem;
+  margin: 2rem;
+  border-radius: .5rem;
+  box-shadow: var(--box-shadow);
+  background: #fff;
+  border: var(--border);
+  text-align: center;
+  width: 40rem;
+}
+
+.login-form-container form .buttons{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.login-form-container form .btn{
+  display: block;
+  width: 100%;
+  margin:5rem 0;
+}
+
+.login-form-container form h3{
+  color: var(--black);
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  padding-bottom:1rem ;
+}
+.login-form-container form .box{
+  margin: .7rem 0;
+  width: 100%;
+  text-transform: none;
+  color: var(--black);
+  font-size: 1.6rem;
+  padding: 1rem 1.2rem;
+  border: var(--border);
+  border-radius:5px ;
+}
+.login-form-container form p{
+  padding: 1rem 0;
+  font-size: 1.5rem;
+  color: var(--light-color);
+}
+.login-form-container form p a{
+   color: var(--yellow);
+text-decoration: underline;   
+}
+
+.login-form-container #close-login-form{
+  position: absolute;
+  top: 1.5rem;
+  right:2.5rem ;
+  font-size: 5rem;
+  color: var(--black);
+  cursor: pointer;
+}
+
+
+
+
 
 
 
