--- a/style.css
+++ b/style.css
@@ -31,6 +31,16 @@ html{
   scroll-padding-top: 7rem;
   scroll-behavior: smooth;
 }
+
+section{
+  padding: 2rem 9%;
+}
+.heading{
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 4.5rem;
+  color: var(--black);
+}
 .btn{
   display: inline-block;
   margin-top: 1rem;
@@ -99,7 +109,7 @@ padding: 3rem 9%;
 }
 .login-form-container{
   position: fixed;
-  top: 0;
+  top: -105%;
   left: 0;
   z-index: 1000;
   height: 100%;
@@ -108,7 +118,13 @@ padding: 3rem 9%;
   display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 0;
 }
+.login-form-container.active{
+  top: 0;
+  opacity: 1;
+}
+
 .login-form-container form{
   padding: 2rem;
   margin: 2rem;
@@ -165,6 +181,76 @@ text-decoration: underline;
   color: var(--black);
   cursor: pointer;
 }
+.home{
+  padding-top: 10rem;
+  text-align: center;
+  overflow-x: hidden;
+}
+.home h1{
+  font-size: 7.5vw;
+  text-transform: uppercase;
+  color: var(--black);
+}
+.home img{
+  width: 100%;
+  margin: 1rem 0;
+}
+.icons-container{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem,1fr));
+  gap: 1.5rem;
+  background: #eee;
+}
+.icons-container .icons{
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  padding: 2rem;
+  background: #fff;
+  box-shadow: var(--box-shadow);
+  border-radius: .5rem;
+}
+.icons-container .icons i{
+height: 6rem;
+width: 6rem;
+line-height: 5rem;
+font-size: 2.5rem;
+border-radius: 50%;
+background: #eee;
+color: var(--black);
+text-align: center;
+}
+.icons-container .icons .content h3{
+  color:var(--yellow) ;
+  font-size: 2.5rem;
+}
+
+.icons-container .icons .content p{
+  color:var(--black) ;
+  font-size: 1.5rem;
+}
+
+.icons-container .icons:hover{
+   background: var(--black);
+}
+
+
+
+.icons-container .icons:hover i{
+  background: var(--yellow);
+}
+.icons-container .icons:hover .content h3{
+  color: #fff;
+}
+
+.icons-container .icons:hover .content p{
+  color: #eee;
+}
+
+
+
 
 
 
